@startuml
skinparam classAttributeIconSize 0
class ApiService {
  +request()
  +refreshSession()
}
class AuthState {
  +accessToken: string?
  +user: UserSummary?
}
class UserSummary {
  +id: string
  +roles: string[]
}
class LoanSummary {
  +id: string
  +outstandingBalance: string
}
class PaymentTransaction {
  +id: string
  +amount: string
}
class Notification {
  +id: string
  +isRead: boolean
}
ApiService --> AuthState
AuthState --> UserSummary
@enduml
